# CPP_babel_2018

./: .gitignore  CMakeLists.txt  Doxyfile_client  Doxyfile_server  Makefile  babel.pro  conanfile.txt
Client/: CMakeLists.txt  Makefile  babel.pro
Client/include/: ClientVoice.hpp  IVoiceStream.hpp  Server.hpp  ServerVoice.hpp  encode.hpp  mainwindow.h  ui_mainwindow.h  voice.hpp
Client/src/: ClientVoice.cpp  Server.cpp  ServerVoice.cpp  encode.cpp  main.cpp  mainwindow.cpp  voice.cpp
Client/ui/: mainwindow.ui
Server/: CMakeLists.txt
Server/include/: Client.hpp  INetworkMessage.hpp  NetClient.hpp  NetworkClient.hpp  NetworkMessage.hpp  NetworkMessageClientJoined.hpp  NetworkMessageClientLeft.hpp  NetworkMessageHeader.hpp  NetworkMessageLogin.hpp  NetworkMessageLogout.hpp  Server.hpp
Server/src/: Client.cpp  NetClient.cpp  NetworkClient.cpp  NetworkMessage.cpp  NetworkMessageClientJoined.cpp  NetworkMessageClientLeft.cpp  NetworkMessageHeader.cpp  NetworkMessageLogin.cpp  NetworkMessageLogout.cpp  Server.cpp  main.cpp
doc/UML/Server/: server.xml
shared/include/: NetworkMessage.hpp
shared/src/: NetworkMessage.cpp
